--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^18.2.7",
     "@angular/compiler": "^18.2.7",
     "@angular/core": "^18.2.7",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.7",
     "@angular/platform-browser": "^18.2.7",
     "@angular/platform-browser-dynamic": "^18.2.7",
@@ -21,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.14.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
